vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_approval_decision_cancelled.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "ApprovalDecision::Cancelled"
---
"cancelled"
