vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_command_approve.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeCommand::Approve { approval_id: fixed_approval_id(), }"
---
{
  "Approve": {
    "approval_id": "33333333-3333-3333-3333-333333333333"
  }
}
