vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_command_cancel_task.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeCommand::CancelTask { task_id: fixed_task_id(), }"
---
{
  "CancelTask": {
    "task_id": "22222222-2222-2222-2222-222222222222"
  }
}
