vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_command_resume_session.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeCommand::ResumeSession { session_id: fixed_session_id(), }"
---
{
  "ResumeSession": {
    "session_id": "11111111-1111-1111-1111-111111111111"
  }
}
