vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_command_run_workflow.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeCommand::RunWorkflow\n{\n    workflow_id: fixed_workflow_id(), input:\n    \"{\\\"prompt\\\":\\\"hello\\\"}\".to_string(),\n}"
---
{
  "RunWorkflow": {
    "workflow_id": "55555555-5555-5555-5555-555555555555",
    "input": "{\"prompt\":\"hello\"}"
  }
}
