vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_command_start_review.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeCommand::start_review(ReviewTarget::Commit\n{ sha: \"deadbeef\".to_string(), title: Some(\"fix auth bug\".to_string()), },\nSome(\"focus on error handling\".to_string()), AutonomyMode::Assist,\nRuntimeEntrypoint::Exec, PathBuf::from(\"/repo\"),)"
---
{
  "StartReview": {
    "target": {
      "commit": {
        "sha": "deadbeef",
        "title": "fix auth bug"
      }
    },
    "prompt": "focus on error handling",
    "autonomy_mode": "assist",
    "entrypoint": "exec",
    "cwd": "/repo"
  }
}
