vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_error_unknown_code.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: err
---
{
  "code": "unknown",
  "details": "legacy_string_code",
  "message": "legacy failure",
  "recovery_hint": null,
  "retry_safe": false,
  "owner": "internal"
}
