vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_event_approval_resolved.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeEvent::ApprovalResolved(ApprovalResolved::new(fixed_approval_id(),\nApprovalDecision::Approved, Some(\"looks good\".to_string()),))"
---
{
  "ApprovalResolved": {
    "approval_id": "33333333-3333-3333-3333-333333333333",
    "decision": "approved",
    "reason": "looks good"
  }
}
