vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_event_entered_review_mode_base.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeEvent::EnteredReviewMode(EnteredReviewMode::new(ReviewTarget::Base\n{ branch: \"main\".to_string(), }, None::<String>,),)"
---
{
  "EnteredReviewMode": {
    "target": {
      "base": {
        "branch": "main"
      }
    }
  }
}
