vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_control_plane__local_runtime__tests_serde__golden_runtime_event_entered_review_mode_custom.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeEvent::EnteredReviewMode(EnteredReviewMode::new(ReviewTarget::Custom\n{ instructions: \"audit error paths\".to_string(), }, None::<String>,),)"
---
{
  "EnteredReviewMode": {
    "target": {
      "custom": {
        "instructions": "audit error paths"
      }
    }
  }
}
